Fix [Project] Clickable area is too large (#538)

--- a/src/components/Project/project.scss
+++ b/src/components/Project/project.scss
@@ -161,6 +161,7 @@
       &__links {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
 
         &-label {
           margin-bottom: 16px;
